<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/device_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_name" />

    <EditText
        android:id="@+id/device_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Device name"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/mac_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mac" />

    <EditText
        android:id="@+id/mac_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="MAC-address"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/area_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area_rus" />

    <EditText
        android:id="@+id/area_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="MAC-address"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/vibration_duration_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/vibration_duration" />

    <Spinner
        android:id="@+id/vibration_duration_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

</LinearLayout>