<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fav.FavActivity">

    <TextView
        android:id="@+id/fav_head_text_view"
        android:layout_width="209dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/favourite"
        android:textColor="@color/blue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fav_recycler_view"
        android:layout_width="391dp"
        android:layout_height="367dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav_head_text_view"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/fav_clear_btn"
        android:layout_width="142dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/blue"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav_recycler_view"
        app:layout_constraintVertical_bias="0.891" />

    <Button
        android:id="@+id/fav_to_seacrh_btn"
        android:layout_width="142dp"
        android:layout_height="62dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/blue"
        android:text="@string/to_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toEndOf="@+id/fav_clear_btn"
        app:layout_constraintTop_toBottomOf="@+id/fav_recycler_view"
        app:layout_constraintVertical_bias="0.891" />

    <Button
        android:id="@+id/fav_plus_btn"
        android:layout_width="57dp"
        android:layout_height="58dp"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/blue"
        android:text="@string/plus"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <TextView
        android:id="@+id/fav_tv"
        android:layout_width="288dp"
        android:layout_height="83dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav_recycler_view"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>